codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__compatible_provider_base_url.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3413
expression: popup
---
▌ Add compatible provider — API base URL
▌ Alibaba Model Studio · ID: alibaba
▌
▌ https://example.com/v1

Press enter to confirm or esc to go back
