codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_display_name_and_tag.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3195
expression: popup
---
  Select Model and Effort
  Display names map to stable model tags; routing stays behind the tag.

› 1. Research Max (current)  tag: research-max · Routed by RichCodex

  Enter select  ·  i add route  ·  d retire route  ·  Esc close
