codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Display names map to stable model tags; routing stays behind the tag.

› 1. test-visible-model (current)  test-visible-model description

  Enter select  ·  i add route  ·  d retire route  ·  Esc close
