codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_route_account_picker.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3273
expression: popup
---
  Choose a provider account
  My Fast Model → my-fast-model · upstream model gpt-5.4

› 1. Primary Codex           openai · verification pending
     Needs Login (disabled)  openai · sign-in required (disabled: Reauthenticate this account
                             before routing traffic to it.)

  Press enter to confirm or esc to go back
