codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_route_stable_tag_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3221
expression: popup
---
▌ Add RichCodex model route — stable tag
▌ Display name: GPT-5.4
▌
▌ gpt-5.4

Press enter to confirm or esc to go back
