codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Display names map to stable model tags; routing stays behind the tag.

  1. GPT-5.6-Sol (default)  tag: gpt-5.6-sol · Latest frontier agentic coding
                            model.
  2. GPT-5.6-Terra          tag: gpt-5.6-terra · Balanced agentic coding model
                            for everyday work.
  3. GPT-5.6-Luna           tag: gpt-5.6-luna · Fast and affordable agentic
                            coding model.
  4. GPT-5.5                tag: gpt-5.5 · Frontier model for complex coding,
                            research, and real-world work.
› 5. GPT-5.2 (current)      tag: gpt-5.2 · Optimized for professional work and
                            long-running agents.

  Press enter to confirm or esc to go back
