codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_workbench_display_name_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3211
expression: display_prompt
---
▌ Model display name
▌ Stable tag: research-max
▌
▌ Research Max

Press enter to confirm or esc to go back
