codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_workbench_mutation_receipt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3291
expression: receipt
---
• Saved: Research Max (tag: research-max) · registry r7 · catalog r7 · catalog synchronized
