codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_workbench_retire_confirmation.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3253
expression: confirmation
---
  Retire Research Max?
  Hide tag research-max from future pickers. Routes, accounts, credentials, and running tasks are

  1. Retire display entry
› 2. Keep entry

  Press enter to confirm or esc to go back
